# FetcherRemix

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
config/: settings.py
db/: silver.parquet
layers/: extract.py  gold.py  schema.py  transform.py  utils.py
layers/extract/: extract_jj.py  extract_nofluff.py  extract_pracuj.py
