[project]
name = "fetcherremix"
version = "0.1.0"
description = "Job market data fetcher and analyzer for Poland"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "duckdb>=1.5.3",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "polars>=1.41.1",
    "pyarrow>=24.0.0",
    "pydantic-settings>=2.14.1",
    "rich>=15.0.0",
]
