[project]
name = "fetcherremix"
version = "0.1.0"
description = "Job market data fetcher and analyzer for Poland"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "beautifulsoup4>=4.14.3",
    "duckdb>=1.5.3",
    "fake-useragent>=2.2.0",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "playwright>=1.61.0",
    "polars>=1.41.1",
    "pyarrow>=24.0.0",
    "pydantic-settings>=2.14.1",
    "rich>=15.0.0",
    "ruff>=0.15.21",
    "typer>=0.26.8",
]

[tool.ruff]
target-version = "py314"
line-length = 88

force-exclude = true

[tool.ruff.lint]
select = [
    "ALL",
]

ignore = [
    "D100",    
    "D104",    
    "D203",    
    "D101",
    "D103",
    "D107",
    "BLE001",
    "D213",    
    "COM812",  
    "ISC001",  
]


[project.scripts]
fetcher = "main:app"
# [tool.ruff.lint.per-file-ignores]
# "tests/**/*.py" = [
#     "S101",   
#     "D101",   
#     "D102",  
#     "D103", 
#     "ANN",   
# ]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
